--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pokemon",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://VojinKrstic.github.io/",
+  "homepage": "https://VojinKrstic.github.io/pokemon",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
